--- a/API/package.json
+++ b/API/package.json
@@ -6,16 +6,19 @@
       "@types/uuid": "^8.3.0",
       "bcrypt": "^5.0.1",
       "cors": "^2.8.5",
+      "dotenv": "^10.0.0",
       "express": "^4.17.1",
       "express-async-errors": "^3.1.1",
+      "express-validator": "^6.12.0",
       "install": "^0.13.0",
       "jsonwebtoken": "^8.5.1",
       "pg": "^8.6.0",
       "reflect-metadata": "^0.1.10",
       "tsconfig": "^7.0.0",
       "typeorm": "0.2.32",
-      "typescript": "^4.2.4",
-      "uuid": "^8.3.2"
+      "typescript": "^4.3.4",
+      "uuid": "^8.3.2",
+      "yup": "^0.32.9"
    },
    "name": "pizzaria_ems",
    "version": "1.0.0",
@@ -27,9 +30,11 @@
       "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
    },
    "devDependencies": {
+      "@types/jsonwebtoken": "^8.5.3",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
       "ts-node-dev": "^1.1.6",
+      "tsconfig-paths": "^3.9.0",
       "typescript": "3.3.3333"
    }
 }
