--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.5.6",
     "@types/react-router-dom": "^5.1.8"
   }
 }
