--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/jquery": "^3.5.6",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-transition-group": "^4.4.2",
     "@types/styled-components": "^5.1.13"
   }
 }
