--- a/API/package.json
+++ b/API/package.json
@@ -16,7 +16,7 @@
       "reflect-metadata": "^0.1.10",
       "tsconfig": "^7.0.0",
       "typeorm": "0.2.32",
-      "typescript": "^4.3.4",
+      "typescript": "^4.4.3",
       "uuid": "^8.3.2",
       "yup": "^0.32.9"
    },
@@ -33,8 +33,7 @@
       "@types/jsonwebtoken": "^8.5.3",
       "@types/node": "^8.0.29",
       "ts-node": "3.3.0",
-      "ts-node-dev": "^1.1.6",
-      "tsconfig-paths": "^3.9.0",
-      "typescript": "3.3.3333"
+      "ts-node-dev": "^1.1.8",
+      "tsconfig-paths": "^3.9.0"
    }
 }
