--- a/API/package.json
+++ b/API/package.json
@@ -1,11 +1,14 @@
 {
    "dependencies": {
       "@types/bcrypt": "^5.0.0",
+      "@types/cors": "^2.8.12",
+      "@types/cron": "^1.7.3",
       "@types/express": "^4.17.11",
       "@types/typescript": "^2.0.0",
       "@types/uuid": "^8.3.0",
       "bcrypt": "^5.0.1",
       "cors": "^2.8.5",
+      "cron": "^1.8.2",
       "dotenv": "^10.0.0",
       "express": "^4.17.1",
       "express-async-errors": "^3.1.1",
