--- a/front/package.json
+++ b/front/package.json
@@ -12,16 +12,19 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-toastify": "^4.1.0",
     "antd": "^4.16.13",
     "axios": "^0.21.4",
     "rc-animate": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fade-in": "^2.0.1",
+    "react-hook-form": "^7.17.5",
     "react-icons": "^4.2.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.1",
     "typescript": "^4.1.2",
