--- a/API/ormconfig.json
+++ b/API/ormconfig.json
@@ -3,8 +3,8 @@
    "host": "localhost",
    "port": 5432,
    "username": "postgres",
-   "password": "docker",
-   "database": "pizzariaCheckEMS",
+   "password": "root",
+   "database": "pizzariacheckems",
    "entities": [
       "./src/models/*.ts"
    ],
