--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-text-mask": "^5.4.10",
     "@types/react-toastify": "^4.1.0",
     "antd": "^4.16.13",
     "axios": "^0.21.4",
@@ -24,9 +25,11 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-text-mask": "^5.4.3",
     "react-toastify": "^8.0.3",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.1",
+    "text-mask-addons": "^3.8.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
