--- a/front/package.json
+++ b/front/package.json
@@ -4,7 +4,11 @@
   "private": true,
   "dependencies": {
     "@ant-design/charts": "^1.2.13",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.2.3",
+    "@mui/styled-engine-sc": "^5.1.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -28,7 +32,7 @@
     "react-text-mask": "^5.4.3",
     "react-toastify": "^8.0.3",
     "react-transition-group": "^4.4.2",
-    "styled-components": "^5.3.1",
+    "styled-components": "^5.3.3",
     "text-mask-addons": "^3.8.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
