--- a/API/package.json
+++ b/API/package.json
@@ -4,6 +4,7 @@
       "@types/cors": "^2.8.12",
       "@types/cron": "^1.7.3",
       "@types/express": "^4.17.11",
+      "@types/node-cron": "3.0.0",
       "@types/typescript": "^2.0.0",
       "@types/uuid": "^8.3.0",
       "bcrypt": "^5.0.1",
@@ -15,6 +16,7 @@
       "express-validator": "^6.12.0",
       "install": "^0.13.0",
       "jsonwebtoken": "^8.5.1",
+      "node-cron": "^3.0.0",
       "pg": "^8.6.0",
       "reflect-metadata": "^0.1.10",
       "tsconfig": "^7.0.0",
