--- a/API/package.json
+++ b/API/package.json
@@ -16,6 +16,7 @@
       "express-validator": "^6.12.0",
       "install": "^0.13.0",
       "jsonwebtoken": "^8.5.1",
+      "multer": "^1.4.4",
       "node-cron": "^3.0.0",
       "pg": "^8.6.0",
       "reflect-metadata": "^0.1.10",
