--- a/front/package.json
+++ b/front/package.json
@@ -23,6 +23,7 @@
     "rc-animate": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-fade-in": "^2.0.1",
     "react-hook-form": "^7.17.5",
     "react-icons": "^4.2.0",
