--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-input-mask": "^3.0.1",
     "@types/react-text-mask": "^5.4.10",
     "@types/react-toastify": "^4.1.0",
     "antd": "^4.16.13",
@@ -27,6 +28,7 @@
     "react-fade-in": "^2.0.1",
     "react-hook-form": "^7.17.5",
     "react-icons": "^4.2.0",
+    "react-input-mask": "^2.0.4",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
