--- a/API/.env
+++ b/API/.env
@@ -9,3 +9,8 @@ TOKEN_ASSIGN=0bd047c3580cd36fcd2beebcdc682cc3
 
 #Dias em segundos
 THIRTY_DAYS=2592000
+
+#Cloudinary configurations
+CLOUD_NAME=dwh1lucmr
+API_KEY=848659481928229
+API_SECRET=itamebQl-6GWNopHQw1jZIvBhdA
