--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -21,6 +22,7 @@
     "@types/react-toastify": "^4.1.0",
     "antd": "^4.16.13",
     "axios": "^0.21.4",
+    "dotenv": "^16.0.0",
     "rc-animate": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
