--- a/front/package.json
+++ b/front/package.json
@@ -12,7 +12,6 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/dotenv": "^8.2.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -22,7 +21,6 @@
     "@types/react-toastify": "^4.1.0",
     "antd": "^4.16.13",
     "axios": "^0.21.4",
-    "dotenv": "^16.0.0",
     "rc-animate": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -44,10 +42,10 @@
   },
   "homepage": ".",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
+    "test": "react-dotenv && react-scripts test",
+    "eject": "react-dotenv && react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -72,5 +70,10 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/react-transition-group": "^4.4.2",
     "@types/styled-components": "^5.1.13"
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "RESTAURANT_NAME"
+    ]
   }
 }
