--- a/API/package.json
+++ b/API/package.json
@@ -1,46 +1,52 @@
 {
-   "dependencies": {
-      "@types/bcrypt": "^5.0.0",
-      "@types/cors": "^2.8.12",
-      "@types/cron": "^1.7.3",
-      "@types/express": "^4.17.11",
-      "@types/node-cron": "3.0.0",
-      "@types/typescript": "^2.0.0",
-      "@types/uuid": "^8.3.0",
-      "bcrypt": "^5.0.1",
-      "cloudinary": "^1.28.1",
-      "cors": "^2.8.5",
-      "cron": "^1.8.2",
-      "dotenv": "^16.0.0",
-      "express": "^4.17.1",
-      "express-async-errors": "^3.1.1",
-      "express-validator": "^6.12.0",
-      "install": "^0.13.0",
-      "jsonwebtoken": "^8.5.1",
-      "multer": "^1.4.4",
-      "node-cron": "^3.0.0",
-      "pg": "^8.6.0",
-      "reflect-metadata": "^0.1.10",
-      "tsconfig": "^7.0.0",
-      "typeorm": "0.2.32",
-      "typescript": "^4.4.3",
-      "uuid": "^8.3.2",
-      "yup": "^0.32.9"
-   },
-   "name": "pizzaria_ems",
-   "version": "1.0.0",
-   "main": "index.js",
-   "license": "MIT",
-   "scripts": {
-      "dev": "ts-node-dev  --inspect --transpile-only --ignore-watch node_modules src/server.ts",
-      "start": "ts-node src/server.ts",
-      "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
-   },
-   "devDependencies": {
-      "@types/jsonwebtoken": "^8.5.3",
-      "@types/node": "^8.0.29",
-      "ts-node": "3.3.0",
-      "ts-node-dev": "^1.1.8",
-      "tsconfig-paths": "^3.9.0"
-   }
+  "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
+    "@types/cron": "^1.7.3",
+    "@types/express": "^4.17.11",
+    "@types/node-cron": "3.0.0",
+    "@types/typescript": "^2.0.0",
+    "@types/uuid": "^8.3.0",
+    "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.1",
+    "cors": "^2.8.5",
+    "cron": "^1.8.2",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "express-validator": "^6.12.0",
+    "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
+    "node-cron": "^3.0.0",
+    "pg": "^8.6.0",
+    "reflect-metadata": "^0.1.10",
+    "tsconfig": "^7.0.0",
+    "typeorm": "0.2.32",
+    "typescript": "^4.4.3",
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
+  },
+  "name": "pizzaria_ems",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
+  "scripts": {
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "start": "ts-node src/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "set NODE_ENV=test && jest --verbose --reporters default --detectOpenHandles --runInBand --testTimeout=60000"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/jsonwebtoken": "^8.5.3",
+    "@types/node": "^8.0.29",
+    "@types/supertest": "^2.0.12",
+    "jest": "^27.5.1",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.4",
+    "ts-node": "3.3.0",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.9.0"
+  }
 }
